[project]
name = "pendule-furuta-doc"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrien Cardinale",email = "adrien.cardinale@heig-vd.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material (>=9.6.20,<10.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
